Criado ApplicationDbContext e configurado conexão com banco de dados SQLServer

--- a/IntegracaoFormularioMVC/appsettings.json
+++ b/IntegracaoFormularioMVC/appsettings.json
@@ -3,7 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=DESKTOP-CIP2BJF\\SQLEXPRESS;Database=Livros;Trusted_Connection=True;"
+    },
+    "AllowedHosts": "*"
+  }
