--- a/IntegracaoFormularioMVC/IntegracaoFormularioMVC.csproj
+++ b/IntegracaoFormularioMVC/IntegracaoFormularioMVC.csproj
@@ -17,10 +17,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Integracao\Refit\" />
+    <PackageReference Include="Refit" Version="6.3.2" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
   </ItemGroup>
 
 </Project>
